Most CSS layout issues resolved - needs more responsiveness

--- a/css/pnl-customer.css
+++ b/css/pnl-customer.css
@@ -1,12 +1,3 @@
-            
-
-            #logo-bar {
-                
-                width:1000px;
-                margin:0 auto;
-                height: 40px;
-                
-            }
 
             
             body {
@@ -16,10 +7,11 @@
                 font-family: Helvetica, Arial, sans-serif;
                 background-color: #232e3e;
             }
+
             
             #logo {
                 
-                margin: 20px 0 8px 0;
+                margin: 20px 0 20px 0;
                 padding: 0px;
                 width:350px;
                 float:left;
@@ -28,10 +20,40 @@
             }
 
 
+            .bar-bg {
+
+                border-style: solid;
+                border-color: black;
+                width: 100%;
+                height: 100%;
+            }
+
+
              .logobar-links {
                 float:left;
-
+                font-weight: normal;
+                margin: 20px 0 8px 0;
+                padding: 35px 15px 0 15px;
+                height:27px;
             }
+
+
+
+            .logobar-hover a {
+                
+                color:white;
+                text-decoration: none;
+                font-size: 24px;
+                position:relative;
+                
+            }
+            
+            .logobar-hover a:hover {
+                
+                text-decoration: underline;
+                
+            }
+
 
             
             .topbar-section {
@@ -41,35 +63,20 @@
                 height:100%;
                 
             }
-            
-            #product-text {
-                
-                font-weight: bold;
-                font-size:90%;
-                position:relative;
-                top:14px;
-                padding-right:50px;
-            }
-            
-            
-            .topbar-menu {
-                
-                font-weight: bold;
-                font-size: 90%;
-                padding: 35px 15px 0 15px;
-                height:27px;
-                
-            }
-            
+
+
 
             #search-box {
-                
+                width: 300px;
+                height: 60px;
+                border-top-left-radius: 10px;
+                border-bottom-left-radius: 10px;
                 background-color: #E4E4E4;
                 border:none;
                 font-weight: bold;
-                font-size: 14px;
+                font-size: 20px;
                 padding:5px;
-                margin: 28px 0 5px 5px;
+                margin: 40px 0 5px 5px;
                 float: left;
             }
 
@@ -81,38 +88,16 @@
 
             
             #magnifying-glass {
-                
-                height:31px;
-                margin-top:28px;
-                
-            }
-            
-            .clear {
-                
-                clear:both;
+                height:60px;
+                margin-top:40px;
                 
             }
-            
-            /*#menu-bar-container {
-                
-                border-top: 1px solid #CCCCCC;
-                background-color: #BB1919;
-                width:100%;
-                height:70px;
-                
-            }
-            
-            #menu-bar {
-                
-                width:1000px;
-                margin:0 auto;
-                
-            }*/
-            
+
+
             h1 {
                 
                 padding:0;
-                margin:0;
+                margin-top: 5px;
                 color:white;
                 font-size: 33px;
                 font-weight: normal;
@@ -121,19 +106,64 @@
             }
 
 
-            /*.raspberry-splash {
+            .raspberry-splash {
                 float: right;
                 margin: 25px
                 width: 700px;
-            }*/
+            }
             
-            .cta {
-                float:left;
-                width: 105px; 
-                margin: 25px 25px 0px 0; 
+            .cta-imgages {
+
+                margin: 0;
+                padding-bottom: 0;
             }
 
-            .cta-text{
+
+            .cta {
                 float:left;
-                margin: -3px 40px 15px 0; 
+                width: 140px; 
+                margin: 20px 25px 0px 0; 
             }
+
+
+            .text-ctas {
+
+               margin-top: 10px;  
+            }
+
+
+            .text-cta-links {
+
+                font-size: 1.4em;
+                font-weight: normal;
+                margin: 0px 45px 0px 0px;
+                float:left;
+                
+            }
+
+
+             .pnl-shoutout {
+
+                padding-top: 10px;
+                background-color: white; 
+                border-style: solid;
+                border-color: #232e3e;
+                width: 100%;
+                height: 50px;
+                text-align: center;
+            }
+
+            
+            .clear {
+                
+                clear:both;
+                
+            }
+
+            /*:root {
+
+                --secondary: #ffc107;
+
+
+            }*/
+
